--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -6,13 +6,15 @@
 {{#if loggedIn}}
 <div class="card">
   <h3 class="card-header"></h3>
-  <form class="card-body comment-form" id="addBlogComment">
+  <form class="card-body comment-form" id="save-comment-form">
+
+    <input type="hidden" name="post-id" value="{{post.id}}" />
 
     <label class="form-label">Add your comment:</label>
     <input id="comment" name="comment-body" class="form-input" />
 
     {{!-- <button type="button" class="btn" id="addBlogComment">Submit</button> --}}
-    <button type="submit" class="btn" id="save-comment-btn" >Save Comment</button>
+    <button type="submit" class="btn">Save Comment</button>
 
   </form>
 </div>
