--- a/views/blogPost.handlebars
+++ b/views/blogPost.handlebars
@@ -5,7 +5,7 @@
 
 {{#if loggedIn}}
 <div class="card">
-  <h3 class="card-header"></h3>
+  {{!-- <h3 class="card-header"></h3> --}}
   <form class="card-body comment-form" id="save-comment-form">
 
     <input type="hidden" name="post-id" value="{{post.id}}" />
