--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,16 +14,25 @@
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
         {{!-- <span role="img" aria-label="money">💸</span> --}}
-        <a href="/">The Tech Blog</a>
+        {{#if isDashboard}}
+        <a href="/dashboard">My Dashboard</a>
+        {{else}}
+        <a href="/">The Tech-Blog</a>
+        {{/if}}
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
-        {{#if loggedIn}}
-        <a href="/dashboard">Dashboard</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{!-- <a href="/logout">logout</a> --}}
+        {{#if isDashboard}}
+          <a href="/">Home</a> |
+          <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/login">login</a>
+          {{#if loggedIn}}
+          <a href="/dashboard">Dashboard</a> |
+          <button class="no-button" id="logout">logout</button>
+          {{!-- <a href="/logout">logout</a> --}}
+          {{else}}
+          <a href="/login">login</a>
+          {{/if}}
         {{/if}}
       </nav>
     </header>
